--- a/app/views/system/editcode.html
+++ b/app/views/system/editcode.html
@@ -25,6 +25,12 @@
             <input name="position" ng-model="newEle.position" placeholder="{{ 'label.input.position' | translate }}"
                    type="text" class="form-control"/>
         </div>
+        <div class="col-sm-3" ng-hide="isHiddenActiveCheckBox">
+            <label class="control-label col-sm-2">{{'label.input.active' | translate}}</label>
+            <div class="col-sm-3">
+                <input id="activeCheckbox" type="checkbox" ng-model="newEle.isActive">
+            </div>
+        </div>
         <div class="col-sm-3">
             <a data-ng-click="addCv()" class="btn btn-primary" has-permission='CREATE_CODEVALUE'><i
                     class="icon-plus icon-white"></i>{{ 'label.button.add' |
